mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: projetocompass
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3308
          name: mysql
        securityContext:
          privileged: true 
        volumeMounts:
        - name: local-storage
          mountPath: /data/pv-mysql/
      securityContext: {}
      volumes:
          - name: hostpath-privileged
            persistentVolumeClaim:
              claimName: mysql-pvc
