mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql-svc
  namespace: projetocompass
  labels:
    app: wordpress
spec:
  ports:
    - port: 3308
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
