wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: projetocompass
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
    tier: frontend
  ports:
    - port: 80
